fix gui